--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "unenv": "^1.10.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250319.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
@@ -44,6 +45,7 @@
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
     "vitest": "^3.0.5",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "wrangler": "^4.2.0"
   }
 }
