--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
-    "unenv": "^1.10.0"
+    "unenv": "^1.10.0",
+    "uuid": "^11.1.0",
+    "woof": "file:"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250319.0",
@@ -46,6 +48,6 @@
     "vite": "^6.1.0",
     "vitest": "^3.0.5",
     "web-vitals": "^4.2.4",
-    "wrangler": "^4.2.0"
+    "wrangler": "^4.3.0"
   }
 }
